Code cleanup; Fix compiler error overflow container bug

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -49,6 +49,7 @@ pre.console {
   height: 15%;
   display: block;
   font-family: monospace;
+  overflow: scroll;
 }
 
 app-monaco-editor {
