--- a/src/styles.css
+++ b/src/styles.css
@@ -56,4 +56,5 @@ table {
 
 html, body {
 	height: 100%;
+	overflow: hidden;
 }
